--- a/assets/styles.css
+++ b/assets/styles.css
@@ -47,6 +47,25 @@ section {
   padding: 50px;
 }
 
-h1, h2 {
+h1 {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+
+h2 {
   margin-bottom: 20px;
+}
+
+h1, h2, h3, h4, h5, p {
+  font-family: Helvetica;
+}
+
+h2 {
+  font-size: 700%;
+}
+
+h4 {
+  font-size: 500%;
 }
