--- a/assets/styles.css
+++ b/assets/styles.css
@@ -63,9 +63,15 @@ h1, h2, h3, h4, h5, p {
 }
 
 h2 {
-  font-size: 700%;
+  font-size: 900%;
+  margin-left: 20%;
+  
 }
 
 h4 {
   font-size: 500%;
+}
+
+p {
+  line-height: 1.5;
 }
