--- a/assets/styles.css
+++ b/assets/styles.css
@@ -48,8 +48,8 @@ section {
 }
 
 h1 {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 15%;
+  margin-bottom: 10%;
   text-align: center;
 }
 
@@ -75,3 +75,77 @@ h4 {
 p {
   line-height: 1.5;
 }
+
+
+
+#home {
+  text-align: center;
+}
+
+#home h1 {
+  font-family: Helvetica;
+  font-size: 1000%;
+  color:#fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#home h1 img {
+  height: 300px;
+  width: 300px;
+  margin: -60px;
+}
+
+
+/* title text animation */
+#title {
+  animation: fadeInAnimation ease 6s;
+  animation-fill-mode: both;
+  animation-delay: 1.3s;
+  animation-iteration-count: 1;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+/* end */
+
+/* logo animation */
+#logo {
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+}
+
+
+
+
+/* end */
+
+/* title under text animation */
+#btext {
+  animation: fadeIn_moveUp ease 4.4s;
+  animation-fill-mode: both;
+  animation-delay: 2.7s;
+  animation-iteration-count: 1;
+  
+}
+
+@keyframes fadeIn_moveUp {
+  0% {
+      opacity: 0;
+      transform: translateY(0);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(-30px);
+  }
+
+
+}
+/* end */
