--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
   background-color: #000;
   color: #fff;
 }
@@ -63,13 +62,15 @@ h1, h2, h3, h4, h5, p {
 }
 
 h2 {
-  font-size: 900%;
-  margin-left: 20%;
+  font-size: 1300%;
+  margin-left: 7%;
   
 }
 
 h4 {
-  font-size: 500%;
+  font-size: 600%;
+  margin-left: 7%;
+  margin-right: 5%;
 }
 
 p {
@@ -84,7 +85,7 @@ p {
 
 #home h1 {
   font-family: Helvetica;
-  font-size: 1000%;
+  font-size: 1400%;
   color:#fff;
   display: flex;
   align-items: center;
@@ -129,7 +130,7 @@ p {
 
 /* title under text animation */
 #btext {
-  animation: fadeIn_moveUp ease 4.4s;
+  animation: fadeIn_moveUp ease 3.4s;
   animation-fill-mode: both;
   animation-delay: 2.7s;
   animation-iteration-count: 1;
@@ -149,3 +150,40 @@ p {
 
 }
 /* end */
+#dreambig {
+  animation: fadeIn_moveUp ease 3.4s;
+  animation-fill-mode: both;
+  animation-delay: 2.7s;
+  animation-iteration-count: 1;
+}
+
+#dbt {
+  animation: fadeIn_moveUp ease 3.4s;
+  animation-fill-mode: both;
+  animation-delay: 3.2s;
+  animation-iteration-count: 1;
+}
+/*dreambigtext animation*/
+
+/* olympiadpageex1 */
+#oly {
+  animation: fadeIn_moveUp ease 3.4s;
+  animation-fill-mode: both;
+  animation-delay: 2.7s;
+  animation-iteration-count: 1;
+}
+
+/* 50 */
+#fif {
+  animation: fadeIn_moveUp ease 3.4s;
+  animation-fill-mode: both;
+  animation-delay: 2.7s;
+  animation-iteration-count: 1;
+}
+
+#fift {
+  animation: fadeIn_moveUp ease 3.4s;
+  animation-fill-mode: both;
+  animation-delay: 3.2s;
+  animation-iteration-count: 1;
+}
