--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,6 +5,12 @@
 }
 
 body {
+  /* overflow-y: hidden; Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
+
+body {
   background-color: #000;
   color: #fff;
 }
@@ -162,6 +168,13 @@ p {
   animation-delay: 3.2s;
   animation-iteration-count: 1;
 }
+
+#dbi {
+  animation: fadeIn_moveUp ease 3.4s;
+  animation-fill-mode: both;
+  animation-delay: 3.7s;
+  animation-iteration-count: 1;
+}
 /*dreambigtext animation*/
 
 /* olympiadpageex1 */
@@ -185,5 +198,9 @@ p {
   animation-fill-mode: both;
   animation-delay: 3.2s;
   animation-iteration-count: 1;
+}
+
+#dbi {
+  filter: brightness(30%)
 }
 
