--- a/assets/styles.css
+++ b/assets/styles.css
@@ -104,6 +104,7 @@ p {
 }
 
 
+
 /* title text animation */
 #title {
   animation: fadeInAnimation ease 6s;
@@ -202,5 +203,49 @@ p {
 
 #dbi {
   filter: brightness(30%)
+}
+
+/* get started button */
+#container {
+  text-align: center;
+  outline: none;
+}
+
+
+.btn {
+  margin-top: 2%;
+  margin-bottom: 13%;
+  padding: 21px 58px;
+  border-radius: 16px;
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+  color: #fff;
+  transition: 0.6s;
+  background-image: linear-gradient(241deg, #189FFD, #AE63E8);
+  background-size: 120% auto;
+  background-position: left;
+}
+
+/* Add the hover effect */
+.btn:hover {
+  background-position: right;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999; /* Set a higher z-index value */
+}
+
+nav ul {
+  list-style: none;
+  z-index: 9999; /* Set a higher z-index value */
 }
 
