--- a/assets/styles.css
+++ b/assets/styles.css
@@ -59,6 +59,7 @@ section {
 h1 {
   margin-top: 15%;
   margin-bottom: 10%;
+  text-align: center;
 }
 
 
@@ -101,10 +102,9 @@ p {
 }
 
 #home h1 img {
-  height: 25%;
-  width: 25%;
+  height: 300px;
+  width: 300px;
   margin: -60px;
-  display: flex;
 }
 
 
