--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  /* overflow-y: hidden; Hide vertical scrollbar */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
+  overflow-x: hidden; 
 }
 
 
@@ -51,10 +50,10 @@ nav a:hover {
   color: #f00;
 }
 
-
+/* 
 section {
   padding: 50px;
-}
+} */
 
 h1 {
   margin-top: 15%;
@@ -72,14 +71,14 @@ h1, h2, h3, h4, h5, p {
 }
 
 h2 {
-  font-size: 1300%;
-  margin-left: 20%;
+  font-size: 850%;
+  margin-left: 7%;
 }
 
 h4 {
-  font-size: 600%;
-  margin-left: 20%;
-  margin-right: 5%;
+  font-size: 450%;
+  margin-left: 7%;
+  
 }
 
 p {
@@ -94,7 +93,7 @@ p {
 
 #home h1 {
   font-family: Helvetica;
-  font-size: 1400%;
+  font-size: 1000%;
   color:#fff;
   display: flex;
   align-items: center;
@@ -102,9 +101,9 @@ p {
 }
 
 #home h1 img {
-  height: 300px;
-  width: 300px;
-  margin: -60px;
+  height: 20%;
+  width: 20%;
+  margin: -3%
 }
 
 
