--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,6 +15,7 @@ body {
 }
 
 
+
 header {
   background-color: #333;
   color: #fff;
@@ -57,63 +58,82 @@ section {
 } */
 
 h1 {
-  margin-top: 15%;
+  margin-top: 20%;
   margin-bottom: 10%;
   text-align: center;
 }
 
 
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 h1, h2, h3, h4, h5, p {
-  font-family: Helvetica;
+  font-family: 'Poppins', sans-serif;
 }
 
 h2 {
   font-size: 850%;
-  margin-left: 20%
+  padding-left: 27%;
+  padding-right: 27%;
+  font-weight: 600;
+  white-space: nowrap;
 }
 
 #dbt {
-  font-size: 200%;
-  margin-left: 20%; 
-  margin-right: 20%; 
+  font-size: 160%;
+  justify-content: center;
+  padding-inline: 27vw;
   color: #9e9e9d; 
-  margin-bottom: 50%; 
-  font-weight: bold
+  font-weight: 500;
 }
 
 #oly {
-  font-size: 200%; 
-  margin-left: 20%; 
-  margin-right: 20%; 
+  font-size: 160%; 
+  padding-left: 27%;
+  padding-right: 27%; 
   color: #9e9e9d;
-  margin-top: 80%;
-  margin-bottom: 25%;
-  font-weight: bold
+  padding-top: 50%;
+  padding-bottom: 25%;
+  font-weight: 500;
 }
 
 h4 {
-  font-size: 450%;
-  margin-left: 20%;
-  margin-right: 20%;
-  
+  font-size: 270%;
+  padding-left: 27%;
+  padding-right: 27%;
+  padding-bottom: 1.5%;
+  font-weight: 600;
 }
 
 #ptext {
-  font-size: 200%; 
-  margin-left: 20%; 
-  margin-right: 20% ;
+  font-size: 160%; 
+  padding-left: 27%;
+  padding-right: 27%;
   color: #9e9e9d; 
-  margin-bottom: 20%; 
-  font-weight: bold
+  padding-bottom: 20%; 
+  font-weight: 500;
 }
 
 p {
-  line-height: 1.5;
+  line-height: 1.4;
 }
+
+#bsm {
+  font-size: 160%; 
+  text-align: center; 
+  color:#fff
+}
+
+#bsbg {
+  font-size: 400%; 
+  text-align: center; 
+  color:#fff;
+  font-weight: 600;
+}
+
+
+
 
 
 
@@ -139,7 +159,7 @@ p {
 #btext {
   text-align: center; 
   font-size: 150%; 
-  margin-bottom: 25%
+  padding-bottom: 25%
 }
 
 
@@ -268,22 +288,31 @@ p {
 .btn {
   margin-top: 2%;
   margin-bottom: 13%;
-  padding: 21px 58px;
+  padding: 15px 28px;
   border-radius: 16px;
   font-size: xx-large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   cursor: pointer;
   color: #fff;
-  transition: 0.6s;
   background-image: linear-gradient(241deg, #189FFD, #AE63E8);
-  background-size: 120% auto;
-  background-position: left;
+}
+
+@keyframes btn {
+  0% {
+      border-radius: 16px;
+  }
+  100% {
+      border-radius: 0px;
+  }
+  
+
 }
 
 /* Add the hover effect */
 .btn:hover {
-  background-position: right;
+  animation: btn ease 0.5s;
+  animation-fill-mode: forwards;
 }
 
 
@@ -302,43 +331,4 @@ p {
 
 /* ... Your existing styles ... */
 
-/* Mobile Styles */
-@media screen and (max-width: 768px) {
-  #home h1 {
-    margin-top: 30vmin;
-    font-size: 18vw; /* Adjust the font size for smaller screens */
-  }
 
-  #btext {
-    font-size: 100%; /* Adjust the font size for smaller screens */
-    margin-bottom: 30%; /* Reduce the margin for smaller screens */
-  }
-
-  /* Adjust the image sizes for smaller screens */
-  #dreambigimg1, #dreambigimg2, #dreambigimg3, #dreambigimg4, #dreambigimg5 {
-    width: 30%;
-    height: auto;
-  }
-
-  /* Adjust the font size for smaller screens */
-  h2 {
-    font-size: 10vw;
-  }
-
-  /* Adjust the font size for smaller screens */
-  h4 {
-    font-size: 4vw;
-    margin-right: 2%;
-  }
-
-  /* Adjust the font size for smaller screens */
-  p {
-    font-size: 4vw;
-  }
-
-  /* Adjust the font size for smaller screens */
-  .btn {
-    font-size: 6vw;
-    margin-bottom: 5%;
-  }
-}
