removed nav bar + edited font color

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,7 +13,7 @@ body {
   background-color: #000;
   color: #fff;
 }
-
+  
 body {
   overflow-x: hidden !important;
 }
@@ -120,14 +120,14 @@ h2 {
   font-size: 160%;
   justify-content: center;
   padding-inline: 20vw;
-  color: #9e9e9d; 
+  color: #bec2bf; 
   font-weight: 500;
 }
 
 .oly {
   font-size: 160%; 
   padding-inline: 20vw;
-  color: #9e9e9d;
+  color: #bec2bf;
   padding-top: 40vh;
   font-weight: 500;
 }
@@ -142,7 +142,7 @@ h4 {
 #ptext {
   font-size: 160%; 
   padding-inline: 20vw;
-  color: #9e9e9d; 
+  color: #bec2bf; 
   padding-bottom: 40vh; 
   font-weight: 500;
 }
