--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,6 +13,7 @@ body {
   background-color: #000;
   color: #fff;
 }
+
   
 body {
   overflow-x: hidden !important;
@@ -22,7 +23,12 @@ body {
   overflow-x: hidden !important;
 }
 
-
+/* body {
+  background-image: url('titleb.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+} */
 
 header {
   background-color: #333;
