--- a/assets/programs.css
+++ b/assets/programs.css
@@ -40,6 +40,10 @@ body {
 }
 
   
+p {
+    line-height: 1.3;
+  }
+
 
 .head {
     display: flex; 
@@ -105,7 +109,7 @@ body {
     border-style:solid; 
     padding-inline: 2vw;
     padding-block: 1vw;
-    margin-inline: 20vw;
+    margin-inline: 18vw;
     border-color:#5FA4FF;
     background-color: #03273d;
     border-radius: 18px;
@@ -116,7 +120,7 @@ body {
     border-style:solid; 
     padding-inline: 2vw;
     padding-block: 1vw;
-    margin-inline: 20vw;
+    margin-inline: 18vw;
     border-color:#FFD0F7;
     background-color: #363636;
     border-radius: 18px;
@@ -127,7 +131,7 @@ body {
     border-style:solid; 
     padding-inline: 2vw;
     padding-block: 1vw;
-    margin-inline: 20vw;
+    margin-inline: 18vw;
     border-color:#72FFFF;
     background-color: #1d4040;
     border-radius: 18px;
