--- a/assets/team.css
+++ b/assets/team.css
@@ -5,8 +5,8 @@
   }
 
   
-body {
-    background-image: url('titleb.png');
+  body {
+    background-color: #000;
     color: #fff;
     font-family: 'Poppins', sans-serif;
   }
