--- a/assets/contact.css
+++ b/assets/contact.css
@@ -49,3 +49,16 @@ body {
     justify-content: space-between 4px;
     gap: 3px;
 }
+
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+  }
+  ::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+  }
+  /* Optional: show position indicator in red */
+  ::-webkit-scrollbar-thumb {
+    background: #FF0000;
+  }
