--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,6 +22,12 @@ body {
   overflow-x: hidden !important;
 }
 
+
+#pplimg {
+  opacity: 50%;
+  width: 90vw
+}
+
 /* body {
   background-image: url('titleb.png');
   background-repeat: no-repeat;
@@ -111,7 +117,7 @@ h1 {
 }
 
 
-#aa, #es, #b {
+#aa, #es, #b, #c {
   height: 387px;
   width: 323px;
   margin-bottom: 40vh;
@@ -148,6 +154,7 @@ h2 {
 }
 
 h4 {
+  padding-top: 20vh;
   font-size: 270%;
   padding-inline: 20vw;
   padding-bottom: 1.5%;
@@ -158,7 +165,7 @@ h4 {
   font-size: 160%; 
   padding-inline: 20vw;
   color: #bec2bf; 
-  padding-bottom: 40vh; 
+  padding-bottom: 90vh; 
   font-weight: 500;
 }
 
