--- a/assets/products.css
+++ b/assets/products.css
@@ -273,7 +273,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    background-color:  #040815;
+    z-index: 999
 }
 
 #usesop {
