--- a/assets/products.css
+++ b/assets/products.css
@@ -104,7 +104,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
 }
 
 .usabo-content,
@@ -115,7 +114,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -30%);
     text-align: center;
     z-index: 2; /* Bring the text content above the background */
     color: #fff; /* Set the text color */
@@ -126,8 +125,8 @@ body {
     background-image: url('webstuff/usabobg.jpg'); /* Update with your image */
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-    transform: scale(1)
+    background-position: center center;
+    transform: scale(1);
 }
 
 #usabob {
@@ -139,7 +138,7 @@ body {
     font-size: 110%;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
-    margin-top: 20vh;
+    margin-top: 30vh;
     border: none;
 }
 
@@ -175,7 +174,7 @@ body {
     font-size: 110%;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
-    margin-top: 20vh;
+    margin-top: 30vh;
     border: none;
 }
 
@@ -213,7 +212,7 @@ body {
     font-size: 110%;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
-    margin-top: 20vh;
+    margin-top: 30vh;
     border: none;
 }
 
@@ -249,7 +248,7 @@ body {
     font-size: 110%;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
-    margin-top: 20vh;
+    margin-top: 30vh;
     border: none;
 }
 
@@ -272,7 +271,7 @@ body {
     background-image: url('webstuff/usesobg.png'); /* Update with your image */
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: 50% 70%;
     z-index: 999
 }
 
@@ -285,7 +284,7 @@ body {
     font-size: 110%;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
-    margin-top: 20vh;
+    margin-top: 30vh;
     border: none;
 }
 
