added new calcp background that is lower

--- a/assets/products.css
+++ b/assets/products.css
@@ -195,7 +195,7 @@ body {
 
 
 .calcp {
-    background-image: url('webstuff/calcpbg.png'); /* Update with your image */
+    background-image: url('webstuff/calcpbgnew.png'); /* Update with your image */
     background-size: cover;
     background-repeat: no-repeat;
     transform: scale(1);
