--- a/assets/team.css
+++ b/assets/team.css
@@ -129,21 +129,30 @@ h1 {
   margin-bottom: 30px;
 }
 
-
-.social-icons {
+.social-details {
   display: flex;
+  flex-direction: row;
   gap: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 30px;
 }
 
-.social-icons a {
-  color: #000; 
+
+
+.fa {
+  background: #000;
+  color: white;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  font-size: 5%;
+  padding: 20%;
+  text-decoration: none;
+  border-radius: 50% ;
   font-size: 20px; 
   transition: color 0.3s ease-in-out;
-}
-
-.social-icons a:hover {
-  color: #000; 
 }
 
 
