--- a/assets/team.css
+++ b/assets/team.css
@@ -87,6 +87,15 @@
   justify-content: center;
 }
 
+.titlebottom {
+  display: flex;
+  justify-content: center;
+}
+
+.titlebottom h1 {
+  padding-top: 5vh;
+}
+
 h1 {
   font-size: 385%;
   padding-top: 20vh;
@@ -102,6 +111,56 @@ h1 {
   justify-content: center;
 }
 
+.writers {
+  display: flex;
+  gap: 60px; 
+  flex-wrap: wrap;
+  padding-inline: 6vw;
+  justify-content: center;
+}
+
+.bottomprof {
+  display: flex;
+  align-items: center;
+}
+
+.bottomprof img {
+  width: 127px;
+  height: 127px;
+  border-radius: 50%;
+  margin-right: 40px
+}
+
+.writerdetails {
+  flex: 1;
+}
+
+.writerdetails h4 {
+  font-size: 150%;
+  font-weight: 600;
+}
+
+ul {
+  list-style-position: inside;
+  line-height: 110%;
+}
+
+.bottomprof:nth-child(3n) {
+  margin-right: 0;
+}
+
+.titlebottombottom {
+  display: flex;
+  justify-content: center;
+}
+
+.titlebottombottom h1 {
+  padding-top: 5vh;
+}
+
+
+
+
 .profile-card {
   background-color: #363636;
   display: flex;
@@ -109,7 +168,6 @@ h1 {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   height: 761.4px;
   width: 403px; 
-  margin-bottom: 200px;  
 }
 
 .profile-card img {
@@ -154,6 +212,8 @@ h1 {
   font-size: 20px; 
   transition: color 0.3s ease-in-out;
 }
+
+
 
 
 
