--- a/assets/usesoboot.css
+++ b/assets/usesoboot.css
@@ -6,11 +6,14 @@
 
   
 body {
-    background-color: #000;
     color: #fff;
     font-family: 'Poppins', sans-serif;
 
   }
+
+header {
+    background-color: #000;
+}
 
 .crazy {
     display: flex; 
@@ -47,4 +50,147 @@ body {
     align-items: under;
     justify-content: space-between 4px;
     gap: 3px;
+}
+
+body {
+  background-color: #0e1f35;
+}
+
+
+h1 {
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 450%;
+    padding-block: 4vh
+}
+
+.description {
+    font-size: 90%;
+    border-radius: 15px;
+    background-color: #274872    ;
+    padding: 2vw;
+    margin-inline: 25vw
+}
+
+h3 {
+  display: flex;
+  justify-content: center;
+  padding-block: 8vh; /* change to only top when making the rest of page, do it */
+  font-size: 250%;
+  font-weight: 600
+}
+
+ul {
+  list-style-position: inside;
+  line-height: 110%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.executive {
+    display: flex;
+    gap: 40px; 
+    flex-wrap: wrap;
+    padding-inline: 6vw;
+    justify-content: center;
+  }
+  
+  .profile-card {
+    background-color: #1e3a5d;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    height: 478.8px;
+    width: 371px; 
+    border-radius: 20px;
+    margin-bottom: -5vh;
+  }
+  
+  .profile-card img {
+    width: 371px;
+    height: 377px;
+    object-fit: cover;
+    margin-bottom: 10px;
+    border-radius: 20px 20px 0px 0px;
+  }
+  
+  .profile-details h2,
+  .profile-details ul {
+    padding-inline: 30px;
+  
+  }
+  
+  .profile-details h2 {
+    margin-bottom: 5px;
+  }
+  
+
+  .break {
+    flex-basis: 100%;
+    height: 0;
+  }
+
+  html {
+    overflow: scroll;
+    overflow-x: hidden;
+  }
+  ::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+  }
+  /* Optional: show position indicator in red */
+  ::-webkit-scrollbar-thumb {
+    background: #FF0000;
+  }
+
+
+  .container {
+    display: flex;
+    justify-content: center;
+  }
+
+  #bruh {
+    color: #000;
+    background-color: #fff;
+    opacity: 60%;
+    padding: 7px 20px;
+    border-radius: 12px;
+    font-size: 110%;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+    margin-block: 15vh;
+    border: none;
+  }
+
+  #bruh:hover {
+    animation: btnnanim ease 0.2s;
+    animation-fill-mode: forwards;
+  }
+
+@keyframes btnnanim {
+    0% {
+        opacity: 60%
+    }
+
+    100% {
+        opacity:  100%
+    }
 }
