--- a/assets/usaboboot.css
+++ b/assets/usaboboot.css
@@ -114,7 +114,7 @@ ul {
   }
   
   .profile-card {
-    background-color: #1e3a5d;
+    background-color: #3a265e;
     display: flex;
     flex-direction: column;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
