ml bootcamp page finished

--- a/assets/mlboot.css
+++ b/assets/mlboot.css
@@ -116,7 +116,7 @@ ul {
   }
   
   .profile-card {
-    background-color: #1e3a5d;
+    background-color: #153e4c;
     display: flex;
     flex-direction: column;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
