--- a/assets/usaphoboot.css
+++ b/assets/usaphoboot.css
@@ -53,7 +53,7 @@ header {
 }
 
 body {
-  background-color: #0e1f35;
+  background-color: #442301;
 }
 
 
@@ -68,7 +68,7 @@ h1 {
 .description {
     font-size: 90%;
     border-radius: 15px;
-    background-color: #274872    ;
+    background-color: #f89023   ;
     padding: 2vw;
     margin-inline: 25vw
 }
@@ -114,7 +114,7 @@ ul {
   }
   
   .profile-card {
-    background-color: #1e3a5d;
+    background-color: #d9944f;
     display: flex;
     flex-direction: column;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
