--- a/assets/usncoboot.css
+++ b/assets/usncoboot.css
@@ -114,7 +114,8 @@ ul {
   }
   
   .profile-card {
-    background-color: #1e3a5d;
+    background-color: 
+    #1d3e37;
     display: flex;
     flex-direction: column;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
