--- a/assets/products.css
+++ b/assets/products.css
@@ -334,6 +334,31 @@ html {
         font-size: 10px
     }
 
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        }
+    
+    #logo {
+        margin-top: 0;
+        margin-bottom: -10px;
+        width: 200px;
+
+    }
+    
+    .head {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    
+    #prod, #prog, #te, #cont {
+        margin: 5px;
+        padding: 2.5px 12.5px;
+    }
+
     
 
 
